# rocm-systems

./: .cmake-format.yaml  .gersemirc  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
projects/aqlprofile/: .clang-format  CMakeLists.txt  README.md  Readme.txt  build.sh  dashboard.cmake
projects/aqlprofile/DEBIAN/: postinst.in  prerm.in
projects/aqlprofile/RPM/: post.in  postun.in
projects/aqlprofile/cmake_modules/: CPack.STGZ_Header.sh.in  env.cmake  utils.cmake
projects/aqlprofile/gfxip/: gpu_block_info.h
projects/aqlprofile/gfxip/gfx10/: gfx10_block_info.h  gfx10_block_table.h  gfx10_primitives.h
projects/aqlprofile/gfxip/gfx11/: gfx11_block_info.h  gfx11_block_table.h  gfx11_primitives.h
projects/aqlprofile/gfxip/gfx12/: gfx12_block_info.h  gfx12_block_table.h  gfx12_primitives.h
projects/aqlprofile/gfxip/gfx9/: gfx9_block_info.h  gfx9_block_table.h  gfx9_primitives.h
projects/aqlprofile/inc/: aql_profile.h
projects/aqlprofile/linux/: soc21_enum.h  soc24_enum.h  vega10_enum.h
projects/aqlprofile/src/: CMakeLists.txt
projects/aqlprofile/src/core/: CMakeLists.txt  amd_aql_pm4_ib_packet.h  aql_profile.cpp  aql_profile.hpp  aql_profile_exception.h  commandbuffermgr.hpp  counter_dimensions.hpp  counters.cpp  gfx10_factory.cpp  gfx11_factory.cpp  gfx12_factory.cpp  gfx908_factory.cpp  gfx90a_factory.cpp  gfx940_factory.cpp  gfx9_factory.cpp  gfx9_factory.h  ip_discovery.h  ip_offset_table_init.cpp  ip_offset_table_init.h  logger.h  memorymanager.cpp  memorymanager.hpp  navi_reg_init.cpp  parse_ip_discovery.cpp  pm4_factory.cpp  pm4_factory.h  populate_aql.cpp  spm_data.cpp  threadtrace.cpp  vega20_reg_init.cpp
projects/aqlprofile/src/def/: gfx10_def.h  gfx11_def.h  gfx12_def.h  gfx908_def.h  gfx90a_def.h  gfx940_def.h  gfx9_def.h  gpu_block_info.h
projects/aqlprofile/src/pm4/: cmd_builder.h  cmd_config.h  gfx10_cmd_builder.h  gfx11_cmd_builder.h  gfx12_cmd_builder.h  gfx9_cmd_builder.h  pmc_builder.h  spm_builder.h  sqtt_builder.h  trace_config.h
projects/aqlprofile/src/util/: hsa_rsrc_factory.cpp  hsa_rsrc_factory.h  reg_offsets.h  soc15_common.h
projects/aqlprofile/test/: CMakeLists.txt  Readme.txt  binary_sample_ex.py  da_16b.py  run.sh  run_install.sh  run_priv.sh  text_sample_ex.py
projects/aqlprofile/test/app/: test.cpp
projects/aqlprofile/test/ctrl/: run_kernel.h  test_aql.h  test_hsa.cpp  test_hsa.h  test_kernel.h
projects/aqlprofile/test/integration/: CMakeLists.txt  agent.cpp  agent.hpp  counter.cpp  counter.hpp  exportmap  intercept.cpp  main.cpp  workload.cpp  workload.hpp
projects/aqlprofile/test/logs/: ATC_pm4_sequence.txt  GCEA_pm4_sequence.txt  MC_ARB_pm4_sequence.txt  log_atc_orig.txt  log_gcea_orig.txt  log_gfx9.txt  scan_gfx9.txt
projects/aqlprofile/test/pgen/: test_pgen.h  test_pgen_pcsmp.h  test_pgen_pmc.h  test_pgen_spm.h  test_pgen_sqtt.h  test_pmgr.cpp  test_pmgr.h
projects/aqlprofile/test/simple_convolution/: simple_convolution.cl  simple_convolution.cpp  simple_convolution.h  simple_convolution.hsail
projects/aqlprofile/test/util/: helper_funcs.h  hsa_rsrc_factory.cpp  hsa_rsrc_factory.h  perf_timer.cpp  perf_timer.h  reg_offsets.h  test_assert.h  xml.h
projects/hip-tests/catch/packaging/: CMakeLists.txt
projects/rdc/example/: CMakeLists.txt  config_example.cc  diagnostic_example.cc  health_example.cc  policy_example.cc  rocprofiler_example.cc  topologylink_example.cc
projects/rocprofiler-compute/: .gersemirc  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
projects/rocprofiler-compute/.github/workflows/: formatting.yml
projects/rocprofiler-compute/coverage/: Coverage.xml  README.md  coverage-latest.xml
projects/rocprofiler-compute/docker/: Dockerfile.customrocmtest  Dockerfile.doctest  Dockerfile.standalone  docker-compose.customrocmtest.yml  docker-compose.doctest.yml  docker-compose.standalone.yml
projects/rocprofiler-compute/docs/: conf.py
projects/rocprofiler-compute/docs/data/: metrics_description.yaml
projects/rocprofiler-compute/docs/how-to/: live_attach_detach.rst
projects/rocprofiler-compute/sample/dynamic_shared/: dynamic_shared.hip  example_utils.hpp
projects/rocprofiler-compute/src/: argparser.py  config.py  rocprof-compute  rocprof_compute_base.py  roofline.py
projects/rocprofiler-compute/src/rocprof_compute_analyze/: analysis_base.py  analysis_cli.py  analysis_db.py  analysis_webui.py
projects/rocprofiler-compute/src/rocprof_compute_profile/: profiler_base.py  profiler_rocprof_v1.py  profiler_rocprof_v2.py  profiler_rocprof_v3.py  profiler_rocprofiler_sdk.py
projects/rocprofiler-compute/src/rocprof_compute_soc/: soc_base.py  soc_gfx908.py  soc_gfx90a.py  soc_gfx940.py  soc_gfx941.py  soc_gfx942.py  soc_gfx950.py
projects/rocprofiler-compute/src/rocprof_compute_tui/: analysis_tui.py  config.py  tui_app.py
projects/rocprofiler-compute/src/utils/: analysis_orm.py  db_connector.py  file_io.py  gui.py  kernel_name_shortener.py  logger.py  mem_chart.py  mi_gpu_spec.py  parser.py  rocpd_data.py  roofline_calc.py  schema.py  specs.py  tty.py  utils.py
projects/rocprofiler-compute/tests/: CMakeLists.txt  conftest.py  generate_test_analyze_workloads.py  test_TCP_counters.py  test_analyze_commands.py  test_analyze_workloads.py  test_autogen_config.py  test_db_connector.py  test_gpu_specs.py  test_import_workloads.py  test_profile_general.py  test_utils.py
projects/rocprofiler-compute/utils/: autogen_hash.yaml  run-ci.py  split_config.py  unified_config.yaml  unified_sets.yaml  update-coverage.sh  ver_check.py
projects/rocprofiler-register/tests/rccl/: CMakeLists.txt  (+2 more)
projects/rocprofiler-sdk/benchmark/: .gitignore  CMakeLists.txt  README.md  example.yml  minimal.yaml  requirements.txt
projects/rocprofiler-sdk/samples/: CMakeLists.txt
projects/rocprofiler-sdk/source/: CMakeLists.txt
projects/rocprofiler-sdk/tests/: CMakeLists.txt
source/lib/rocprof-sys-attach/: CMakeLists.txt  attach.cpp  attach.hpp  ptrace_session.cpp  ptrace_session.hpp
(+3599 files in other folders)
